--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hunaepi/laravel-sybase",
+    "name": "uepg/laravel-sybase",
     "description": "Sybase based Eloquent module extension for Laravel 5.x.",
     "keywords": [
         "sybase"
@@ -27,16 +27,16 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Hunaepi\\LaravelSybase\\SybaseServiceProvider"
+                "Uepg\\LaravelSybase\\SybaseServiceProvider"
             ],
             "aliases": {
-                "UepgBlueprint": "Hunaepi\\LaravelSybase\\Database\\Schema\\Blueprint"
+                "UepgBlueprint": "Uepg\\LaravelSybase\\Database\\Schema\\Blueprint"
             }
         }
     },
     "autoload": {
         "psr-4": {
-            "Hunaepi\\LaravelSybase\\": "src/"
+            "Uepg\\LaravelSybase\\": "src/"
         }
     }
 }
